# ai-news-tracker

./: .gitignore  README.md  migrate_db.py  pyproject.toml
ai_news_tracker/: __init__.py  algorithms.py  auth.py  cli.py  clustering.py  embeddings.py  logging_config.py  mind_trainer.py  models.py  opml.py  preferences.py  recommender.py  reranker.py  scheduler.py  sources.py  web.py
ai_news_tracker/static/: index.html
tests/: conftest.py  test_algorithms.py  test_cli.py  test_clustering.py  test_embeddings.py  test_logging.py  test_mind_trainer.py  test_models.py  test_preferences.py  test_recommender.py  test_reranker.py  test_sources.py  test_web.py
